feat(DATA-1372): ignore theoretical SM data for consistency report